# MAF

./: CMakeLists.txt  SuperBuild.cmake  UseMAF.cmake.in
CMake/: mafMacroBuildProject.cmake  mafMacroConfigureProject.cmake  mafMacroDebugPrintVariables.cmake  mafMacroInitProject.cmake  mafMacroInstallProject.cmake  mafMacroSetupQt.cmake
CMakeExternals/: External_KDSoap.cmake  External_WSF_CPP.cmake  Find_KDSoap.cmake  Find_WSF_CPP.cmake
examples/SimpleApp/: CMakeLists.txt  main.cpp  target_libraries.cmake
examples/VTKButtons/: CMakeLists.txt
examples/mafCTKHostedApplication/: CMakeLists.txt
examples/mafCTKSimpleApp/: CMakeLists.txt
examples/mafPythonQtExample/: CMakeLists.txt
examples/mapReduceExample/: CMakeLists.txt
examples/qaCheck/: CMakeLists.txt
src/: CMakeLists.txt
src/mafApplicationLogic/: CMakeLists.txt  mafLogic.cpp  mafLogic.h  mafLogicLight.cpp  target_libraries.cmake
src/mafCore/: CMakeLists.txt  mafCoreDefinitions.h  mafCoreSingletons.cpp  mafDelegate.cpp  mafIdProvider.cpp  mafLoggerConsole.cpp  mafLoggerFile.cpp  mafMemento.cpp  mafMemento.h  mafMementoObject.cpp  mafMessageHandler.cpp  mafMonitorHardDisk.cpp  mafMonitorRAM.cpp  mafObject.cpp  mafObjectBase.cpp  mafObjectFactory.h  mafObjectRegistry.cpp  mafReferenceCounted.cpp  mafSmartPointer.txx
src/mafEventBus/: CMakeLists.txt  mafEventBusManager.cpp  mafEventDefinitions.h  mafEventDispatcher.cpp  mafEventDispatcherLocal.cpp  target_libraries.cmake
src/mafGUI/: CMakeLists.txt  mafDragDropModel.cpp  mafGUIManager.h  (+10 more)
test/: CMakeLists.txt
test/mafPluginQtTest/: CMakeLists.txt
(+372 files in other folders)
